# syndiag

./: .gitignore  CMakeLists.txt  COPYING  README.md
doc/: COPYING.c  COPYING.py  background.md  diag-mtu1280v4.puml  diag-mtu1280v6.puml  diag.puml  icmp_paranoia.patch
openrc/: syndiagd.in
src/: config.h.in  read-syndiag  syndiag-run  syndiag.c  syndiagd.c  util.c  util.h
systemd/: syndiagd.service.in
test/suites/: functions  local-load-test  local-syn-flood  util-func-tests.c  yaml
